package observer

type DisplayElement interface {
	display()
}